# avoider

./: default.nix  meson.build
src/: ai.h  config.h  engine.c  engine.h  main.c  math_util.c  math_util.h  object.c  object.h
src/ai/: common.c  simple.c  simple2.c
